--- a/Meeting/09_12.md
+++ b/Meeting/09_12.md
@@ -25,7 +25,8 @@
 ---
 
 ## 부가기능 (팀원들의 자율적인 추가 사항 포함)
-- 
+- 인생네컷 브랜드 중 사진과 제공되는 브랜드와 사진과 영상이 동시에 제공되는 브랜드에 대한 경우
+동영상까지 DB에 넣는 식으로 개발 시작 (개발 제한시 사진만 가져오는 경우로 변경 예정)
 - 
 - 
 - 
