Add the additional function(By OJK)

--- a/Meeting/09_12.md
+++ b/Meeting/09_12.md
@@ -25,8 +25,8 @@
 ---
 
 ## 부가기능 (팀원들의 자율적인 추가 사항 포함)
-- 
-- 
+- (오재근) VPC 활용하여 public, private 나눠보기
+- (오재근) Prometheus & Grafana 사용하여 모니터링 시스템 구축
 - 
 - 
 - 
